# aiogram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
docker/: .env.example  .env.production.example  docker-compose.yml
src/applications/contracts/: default.py
src/applications/contracts/books/: requests.py  responses.py
src/applications/interfaces/: mapper.py
src/applications/use_cases/books/: all.py  get.py
src/applications/use_cases/commands/: contacts.py  help.py  start.py
src/domain/accounts/: entity.py  repository.py
src/domain/books/: entity.py  repository.py
src/domain/core/: exceptions.py  value_objects.py
src/infrastructure/di/: core.py  providers.py
src/infrastructure/persistence/: transactions.py
src/infrastructure/persistence/mappers/: account.py  book.py  core.py
src/infrastructure/persistence/migrations/: env.py
src/infrastructure/persistence/migrations/versions/: 6f26fbd1230e_.py
src/infrastructure/persistence/models/: __init__.py  accounts.py  book.py
src/infrastructure/persistence/repositories/: books.py
src/infrastructure/services/internal/callbacks/: book.py
src/infrastructure/services/internal/keyboards/: actions.py  all_books.py  contacts.py  core.py  factory.py
src/infrastructure/services/internal/logger/: config.py  logger.py
src/infrastructure/settings/: books.py  database.py
src/presentation/: entrypoint.py
src/presentation/routers/: books.py  commands.py
